fix a couple things in PlayerRow removed CardPile.jsx renamed CardPile.scss to CardPileLink.scss fixed SquishableCardPanel.jsx

--- a/client/Components/GameBoard/CardPileLink.scss
+++ b/client/Components/GameBoard/CardPileLink.scss
@@ -66,88 +66,6 @@
     overflow-y: auto;
 }
 
-.card-pile {
-    padding: 0px;
-    position: relative;
-    margin: 0px 5px;
-
-    &.small {
-        &.vertical {
-            height: $keyteki-card-sm-height;
-            min-width: $keyteki-card-sm-width;
-        }
-
-        &.horizontal {
-            height: $keyteki-card-sm-width;
-            width: $keyteki-card-sm-height;
-        }
-    }
-
-    &.large {
-        &.vertical {
-            height: $keyteki-card-lg-height;
-            min-width: $keyteki-card-lg-width;
-        }
-
-        &.horizontal {
-            height: $keyteki-card-lg-width;
-            width: $keyteki-card-lg-height;
-        }
-    }
-
-    &.x-large {
-        &.vertical {
-            height: $keyteki-card-xl-height;
-            min-width: $keyteki-card-xl-width;
-        }
-
-        &.horizontal {
-            height: $keyteki-card-xl-width;
-            width: $keyteki-card-xl-height;
-        }
-    }
-
-    &.vertical {
-        height: $keyteki-card-height;
-        min-width: $keyteki-card-width;
-    }
-
-    &.horizontal {
-        height: $keyteki-card-width;
-        width: $keyteki-card-height;
-    }
-
-    .card-placeholder {
-        height: $keyteki-card-height;
-    }
-
-    .panel {
-        z-index: $layer-card-menu;
-        background-color: rgba(0, 0, 0, 0.85);
-        position: fixed;
-
-        a {
-            display: inline-block;
-            margin: 0 10px 8px 0;
-            text-decoration: none;
-
-            &:hover {
-                color: theme-color(info);
-                cursor: pointer;
-            }
-        }
-
-        .panel {
-            margin-bottom: 0;
-            padding: 5px;
-        }
-
-        .panel-title {
-            margin: 5px 5px;
-        }
-    }
-}
-
 .card-pile-link {
     padding: 0px;
     position: relative;
