--- a/client/Components/GameBoard/GameBoard.scss
+++ b/client/Components/GameBoard/GameBoard.scss
@@ -80,8 +80,7 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    justify-content: space-evenly;
-    min-height: 0;
+    justify-content: space-between;    min-height: 0;
 }
 
 .player-board {
